# pw-ghost-rec

./: .gitignore  default.nix  flake.nix  ghost_patch_selected_take.lua  meson.build  readme.md  run.sh  take_patcher.py
patchers/REAPER/: default.nix  run.py
src/: audio-buffer.c  audio-buffer.h  channel-buffer.c  channel-buffer.h  meson.build  pw-ghost-rec.c  ring-buffer.c  ring-buffer.h
test/: meson.build  test_audio_buffer.c  test_channel_buffer.c  test_ring_buffer.c
